Use-Cases/install_prometheus_grafana_alertmanager/alertmanager-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: alertmanager.elb.devops-caffe.com
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-kube-prometheus-alertmanager
          servicePort: 9093
